# Talent-Finder

./: .gitignore  APPLICATION_WORKFLOW.md  DEPLOYMENT.md  TECHNICAL_DESIGN_DOCUMENT.md  docker-compose.yml
apigateway/: .env.example  Dockerfile  main.py  pyproject.toml
apigateway/src/api/rest/: app.py  dependencies.py
apigateway/src/api/rest/routes/: gateway.py  health.py
apigateway/src/config/: settings.py
apigateway/src/core/services/: gateway_service.py
server/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  alembic.ini  celery_worker_runner.py  main.py  pyproject.toml  results.html  structure.md  test_background_scoring_task.py  test_candidate_acquisition.py  test_candidate_details_client.py  test_candidate_persistence.py  test_candidate_synchronization.py  test_extract_endpoint.py  test_pipeline_integration.py  test_pipeline_resilience.py  test_prescore_threshold.py  test_proficiency_scoring.py  test_scoring_with_extracted_jd.py  test_search_query_generation.py  test_sequential_tasks_verification.py  test_sourcing_client_manual.py  test_stale_task_recovery.py  test_update_flow_with_raw_jd.py
server/example/: file.py  websocket_client.py
server/src/api/middleware/: my_auth_middleware.py
server/src/api/rest/: dependencies.py
server/src/api/rest/routes/: auth_route.py  job_description_route.py  lookup_route.py  notification_route.py  otp_router.py  scoring_route.py
server/src/config/: settings.py
server/src/constants/: job_description_constants.py  scoring_constants.py
server/src/control/agents/: candidate_search_query_agent.py  groq_client.py  job_description_extraction_agent.py  prompts.py  scoring_agent.py
server/src/core/: celery_app.py  tasks.py
server/src/core/exceptions/: auth_exceptions.py  handlers.py  job_description_exception.py  scoring_exceptions.py
server/src/core/security/: JwtProvider.py  otp_store.py
server/src/core/services/: auth_service.py  candidate_acquisition_service.py  candidate_synchronization_service.py  job_description_service.py  notification_service.py  otp_service.py  progress_reporter.py  resume_parser.py  scoring_ai_client.py  scoring_service.py  scoring_task_service.py
server/src/data/clients/: candidate_search_client.py  postgres.py
server/src/data/migrations/: env.py
server/src/data/migrations/versions/: 235e3a881606_add_interview_fields_to_pipeline.py  dfac98083d58_add_scoring_task_table.py  (+5 more)
server/src/data/repositories/: auth_repository.py  job_description_repository.py  notification_repository.py  scoring_repository.py  scoring_task_repository.py
server/src/data/seeders/: user_seeder.py
server/src/handlers/http_clients/: brevo_client.py
server/src/schemas/: auth_schema.py  candidate_search_schema.py  job_description_extraction_schema.py  job_description_schema.py  notification_schema.py  otp_schema.py  pipeline_candidate_state.py  scoring_schema.py  sync_result.py
server/src/utils/: crypt.py  email_templates.py  jd_comparison_helper.py  master_data_seeder.py  review_state_helper.py  user_seeder.py  validation.py
server/tests/: test_add_recruiter.py  test_auth_flow.py  test_campaign_closing.py  test_candidate_acquisition.py  test_candidate_persistence.py  test_candidate_synchronization.py  test_extract_endpoint.py  test_groq_key_rotation.py  test_invalidate_shared_shortlist.py  test_job_description_edit_lock.py  test_optional_max_experience.py  test_pipeline_resilience.py  test_proficiency_scoring.py  test_resume_parser.py  test_scoring_engine.py  test_scoring_service_integration.py  test_search_query_generation.py  test_sequential_tasks_verification.py  test_sourcing_client_manual.py  test_update_flow_with_raw_jd.py
sourcing/: .dockerignore  Dockerfile  main.py  pyproject.toml  search.html  test_groq_rotation.py  test_sourcing_exclusion.py
sourcing/src/api/rest/: app.py  dependencies.py
sourcing/src/config/: settings.py
sourcing/src/control/agents/: candidate_search_strategy_agent.py  groq_client.py  resume_extraction_agent.py
sourcing/src/core/services/: candidate_search_service.py  candidate_service.py  postjobfree_resume_parser.py  postjobfree_search_parser.py  postjobfree_sourcing_service.py  search_query_optimizer.py  search_strategies.py
sourcing/src/data/clients/: init_db.py  postgres.py
sourcing/src/data/repositories/: candidate_repository.py
sourcing/src/handlers/http_clients/: postjobfree_client.py
sourcing/src/schemas/: candidate_details_response.py  candidate_search_request.py  candidate_search_response.py  compressed_candidate.py  postjobfree_resume.py  postjobfree_search_request.py  postjobfree_search_result.py  resume_candidate_output.py  resume_extraction_result.py  search_attempt.py
sourcing/tests/: test_groq_rotation.py  test_sourcing_exclusion.py
(+103 files in other folders)
