[project]
name = "apigateway"
version = "0.1.0"
description = "API Gateway Microservice for Talent Finder"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "pydantic-settings>=2.14.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "test_*.py",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "C4",
]
ignore = ["B008", "N818", "B905"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
disallow_untyped_defs = true
no_implicit_optional = true
