[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "huggingface-hub>=1.19.0",
    "langchain>=1.3.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "numpy>=2.4.6",
    "passlib==1.7.4",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.14",
    "types-passlib>=1.7.7.20260211",
    "types-python-jose>=3.5.0.20260408",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "test_*.py",
]

[tool.ruff.lint.per-file-ignores]
"src/utils/email_templates.py" = ["E501"]
"src/data/migrations/versions/*.py" = ["E501"]
"src/control/agents/prompts.py" =["E501"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "C4",
]
ignore = ["B008", "N818"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
