[project]
name = "sourcing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.1",
    "langchain>=1.3.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
]
