[project]
name = "sourcing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.1",
    "langchain>=1.3.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py312"

exclude = [
    "test_*.py",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "C4",
]

ignore = [
    "B008",
    "N818",
    "B905",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"src/control/agents/prompts.py" = ["E501"]
"src/data/migrations/versions/*.py" = ["E501"]
"src/control/agents/candidate_search_strategy_agent.py" = ["E501"]

[tool.mypy]
python_version = "3.13"

strict = true

disallow_untyped_defs = true

no_implicit_optional = true
